--- a/flower.html
+++ b/flower.html
@@ -9,13 +9,15 @@
     <title>Flower</title>
   </head>
   <body class="container">
-    <audio src="sound/ChristianBasso&HaienQiu-Flowers.mp3" autoplay></audio>
+    <audio src="sound/Siddhartha, Carlos Sadness - 80 Días  Letra.mp3" autoplay></audio>
     <div id="lyrics">
      
     </div>
-    <h1 class="titulo">Estas flores amarillas son un reflejo de la alegría que traes a mi vida. <br> <br>
-      Gracias por iluminar mis días con tu presencia.</h1>
-  
+    <h1 class="titulo">
+      "No importa lo difícil que sea el día, siempre quiero recordarte que eres increíble y que me importas muchísimo,
+       y si alguna vez dudas de tu fuerza, recuerda que incluso las flores más delicadas pueden sobrevivir a las tormentas"
+    </h1>
+    <p class="para">Para Jazmin</p>
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
@@ -326,7 +328,6 @@
         </div>
       </div>
     </div>
-    <script src="anim.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
