--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 </head>
 
 <body>
+    <div class="boxJJ">
+        <img src="./img/jazmingarragate.jpg" class="jj" alt="" srcset="">
+    </div>
     <div class="greetings">
-        <span>H</span>
-        <span>o</span>
-        <span>l</span>
-        <span>a</span>
+        <span>J</span>
+        <span>A</span>
+        <span>Z</span>
+        <span>M</span>
+        <span>I</span>
+        <span>N</span>
         <span>!</span>
     </div>
     <div class="description">
@@ -23,7 +28,7 @@
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
+            <a href="flower.html" style="color: #fff;">Vamos, dale click aqui</a>
         </button>
     </div>
 
